refactor(api): stabilize public contracts, null semantics, and fail-closed security